--- a/Hahn.ApplicatonProcess.February2021.Web/ClientApp/src/components/shared/nav-bar.html
+++ b/Hahn.ApplicatonProcess.February2021.Web/ClientApp/src/components/shared/nav-bar.html
@@ -5,6 +5,6 @@
       <a class="p-2 text-dark" route-href="route: index">Assets</a>
       <a class="p-2 text-dark" route-href="route: create">Create Asset</a>
     </nav>
-    <a class="btn btn-outline-primary" route-href="route: success">Sign up</a>
+    <!-- <a class="btn btn-outline-primary" route-href="route: success">Sign up</a> -->
   </div>
 </template>
